page title fix (nowrap)

--- a/profile/themes/openculturas_base/templates/block/block--openculturas-custom-page-title.scss
+++ b/profile/themes/openculturas_base/templates/block/block--openculturas-custom-page-title.scss
@@ -33,7 +33,7 @@
   @include breakpoint(m) {
     margin-top: 1rem;
     margin-bottom: 4rem;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     align-items: normal;
     text-align: left;
 
